--- a/Client/.env
+++ b/Client/.env
@@ -1,2 +1,2 @@
 # VITE_BACKEND_URL=https://hospital-management-1-b4em.onrender.com
-VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL=https://swasthcare.onrender.com
