--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,4 @@ CLOUDINARY_CLOUD_NAME = df7zyzkbe
 CLOUDINARY_API_KEY = 777233261885631
 CLOUDINARY_API_SECRET = HuYmXjACXtMR4MESsbDLeUZWzFY
 # FRONTEND_URL = "https://superb-fudge-68605f.netlify.app"
-FRONTEND_URL = "http://localhost:5173"
+# FRONTEND_URL = "http://localhost:5173"
